# mcp-hubspot

./: .coveragerc  .dockerignore  .env.example  .envrc  .flake8  .gitignore  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  Dockerfile  LICENSE  README.md  __init__.py  bandit_report.json  claude_desktop_config.example.json  docker-entrypoint.sh  fastagent.config.yaml  justfile  main.py  mcp.example.json  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  server.py
.cursor/rules/: README.md  README.mdc  coding-conventions.mdc  commit-conventions.md  commit-conventions.mdc  cursor-behavior.md  cursor-behavior.mdc  development-workflow.md  development-workflow.mdc  documentation-conventions.mdc  mcp-tools-conventions.md  mcp-tools-conventions.mdc  project-structure.md  project-structure.mdc  python-standards.md  python-standards.mdc  security-conventions.mdc  task-definition-convention.mdc  terraform-conventions.mdc
.github/workflows/: ci.yml
deploy/: Chart.yaml  README.md  environment.example  values-production.yaml  values.example.yaml
deploy/charts/: app-component-3.14.0.tgz
deploy/scripts/: build-image.sh  deploy-mcp-hubspot.sh  deploy.sh  docker-utils.sh  test-deployment.sh  test-sse-mcp.sh
docs/: api-reference.md  caching.md  claude-desktop-configuration.md  claude-desktop-integration.md  configuration.md  contributing.md  developer.md  docker-setup.md  environment-setup.md  examples.md  installation-local-stdio.md  installation-remote-sse.md  installation.md  integration-testing.md  integration.md  local-installation.md  mcp-clients-integration.md  mcp-inspector.md  semantic-search.md  sse-endpoints.md  tools.md  troubleshooting.md  usage-examples.md
examples/: README.md  clear_and_reindex.py  test_force_reindex.py
examples/basic/: README.md  requirements.txt  test_mcp_client.py
examples/claude/: claude_desktop_config_sse.example.json  claude_desktop_config_sse_local.example.json  claude_desktop_config_stdio.example.json  claude_desktop_config_stdio_with_launch_script.example.json
examples/fastagent-sse/: Makefile  README.md  agent.py  fastagent.config.yaml  fastagent.secrets.example.yaml  launch.py  requirements.txt  test-setup.py
examples/fastagent-stdio/: README.md  fastagent.config.yaml  fastagent.secrets.example.yaml
reports/: README.md
rules/: .cursorrules  commit-conventions.md
scripts/: README.md  check_quality.sh  install_hooks.sh  lint_check.py  run_mcp_hubspot.sh
tests/: __init__.py  conftest.py  test_config.py  test_deal_tools.py  test_formatters.py  test_formatters_simple.py  test_main.py  test_server.py  test_tools.py
(+124 files in other folders)
