[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubspot-mcp-server"
version = "0.1.0"
description = "MCP Server for HubSpot integration"
requires-python = ">=3.12"
dependencies = ["mcp>=1.0.0", "httpx>=0.25.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]
