[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubspot-mcp-server"
version = "0.1.0"
description = "MCP Server for HubSpot integration"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.25.0",
  "pydantic>=2.0.0",
  "uvicorn>=0.24.0",
  "starlette>=0.27.0",
  "cachetools>=5.5.2",
  "types-cachetools>=6.0.0.20250525",
  "faiss-cpu>=1.7.4",
  "sentence-transformers>=2.2.0",
  "numpy>=1.24.0",
  "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "bandit>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hubspot_mcp*"]

[project.scripts]
hubspot-mcp-server = "hubspot_mcp.__main__:cli_main"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src", "hubspot_mcp"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[dependency-groups]
dev = ["fast-agent-mcp>=0.2.30"]
